--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,7 @@ footer {
 /* Common */
 
 time {
-  color: grey;
+  color: #555;
 }
 
 /* Posts */
